<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/azulFuerte"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:scaleType="centerInside"
        android:src="@drawable/logo_blanco" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nombre"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/white"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/correo"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/contra"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/txtContraReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/verificar_contra"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/txtVerificarContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/white"
        />


    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:textColor="@color/azulFuerte"
        android:text="@string/registrarse"
        android:background="@drawable/round_button"
        />

    <Button
        android:id="@+id/btnIniciar_Facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:textColor="@color/azulFuerte"
        android:text="@string/sesion_face"
        android:background="@drawable/round_button"
        />

    <Button
        android:id="@+id/btnIniciar_Google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:textColor="@color/azulFuerte"
        android:text="@string/sesion_google"
        android:background="@drawable/round_button"
        />


</LinearLayout>