<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulBajo"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/horario_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arte"
        android:textStyle="bold"
        android:textColor="@color/azulFuerte"
        android:textSize="30sp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="61dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dibujo"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/azulFuerte"
        android:layout_marginStart="49dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="61dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dibujoact"
        android:textSize="20sp"
        android:textColor="@color/colorLetra"
        android:layout_marginStart="49dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="61dp"/>

    <ImageView
        android:layout_width="370dp"
        android:layout_height="480dp"
        android:src="@drawable/casa"
        android:layout_marginTop="10dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descargar"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/azulFuerte"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"/>

</LinearLayout>