<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulBajo"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/horario_semana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semana"
        android:textStyle="bold"
        android:textColor="@color/azulFuerte"
        android:textSize="40sp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="216dp"
        />

    <TableLayout
        android:layout_width="318dp"
        android:layout_height="220dp"
        android:background="@drawable/round_button_base"
        android:layout_marginTop="43dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp">
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diaActividad1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="24dp"
                android:layout_marginTop="7dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="3dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="249dp"
                android:layout_height="100dp"
                android:text="@string/Actividad1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="7dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="249dp"
                android:layout_height="100dp"
                android:text="@string/ver"
                android:clickable="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="7dp"/>
        </TableRow>



    </TableLayout>

    <TableLayout
        android:layout_width="318dp"
        android:layout_height="220dp"
        android:background="@drawable/round_button_base"
        android:layout_marginTop="43dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp">
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diaActividad2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="24dp"
                android:layout_marginTop="7dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="3dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="249dp"
                android:layout_height="100dp"
                android:text="@string/Actividad2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="7dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="249dp"
                android:layout_height="100dp"
                android:text="@string/ver"
                android:clickable="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="7dp"/>
        </TableRow>



    </TableLayout>





</LinearLayout>